k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edunexus-deployment
  labels:
    app: edunexus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edunexus
  template:
    metadata:
      labels:
        app: edunexus
    spec:
      containers:
      - name: edunexus-container
        image: 740820043343.dkr.ecr.us-east-1.amazonaws.com/edunexus:sha-055364c057df0886d8479e75c0652b78815ed95b
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
